최종 템플릿